# kitten

./: .gitignore  CMakeLists.txt  README.md  algo_template.sh  kattis_template.sh  template.sh
AI/turtle_master/: components.py  robot_turtles.py  test_turtle_master.py
algorithms/: CMakeLists.txt  big_integer.cpp  big_integer.hpp  bit.cpp  bit.hpp  convex_hull.cpp  convex_hull.hpp  interval_cover.cpp  interval_cover.hpp  knapsack.cpp  knapsack.hpp  lis.cpp  lis.hpp  ray_casting.cpp  ray_casting.hpp  segment_tree.cpp  segment_tree.hpp  unionfind.cpp  unionfind.hpp
data_structures/: CMakeLists.txt
data_structures/bit/: CMakeLists.txt  main.cpp  sample.in  sample.output
data_structures/caching/: CMakeLists.txt  count_reads.py  main.cpp  sample.in  sample.output
data_structures/chopwood/: CMakeLists.txt  main.cpp  sample.in  sample.output
data_structures/turbo/: CMakeLists.txt  main.cpp  sample.in  sample.output
data_structures/unionfind/: CMakeLists.txt  main.cpp
dynamic_programming/: CMakeLists.txt
dynamic_programming/aspenavenue/: CMakeLists.txt  main.cpp  sample.in  sample.output
dynamic_programming/howmanyzeros/: CMakeLists.txt  main.cpp  sample.in  sample.output
dynamic_programming/knapsack/: CMakeLists.txt  main.cpp  sample.in  sample.output
dynamic_programming/knockout/: CMakeLists.txt  main.cpp  sample.in  sample.output
dynamic_programming/metube/: CMakeLists.txt  main.cpp  sample.in  sample.output
dynamic_programming/spiderman/: CMakeLists.txt  main.cpp  sample.in  sample.output
geometry/: CMakeLists.txt
geometry/cropeasy/: CMakeLists.txt  main.cpp
geometry/dartscoring/: CMakeLists.txt  main.cpp  sample.output
geometry/imperfectgps/: CMakeLists.txt  main.cpp  sample.in  sample.output
geometry/pointinpolygon/: CMakeLists.txt  main.cpp
greedy/: CMakeLists.txt
greedy/help2/: CMakeLists.txt  main.cpp  sample.in  sample.output
greedy/intergalacticbidding/: CMakeLists.txt  main.cpp  sample.in  sample.output
greedy/interval_cover/: CMakeLists.txt  interval_cover.cpp  interval_cover.hpp  main.cpp  sample.in  sample.output  test_interval_cover.cpp
greedy/lis/: CMakeLists.txt  main.cpp  sample.in  sample.output
greedy/ljutnja/: CMakeLists.txt  main.cpp  sample.in  sample.output
miscellaneous/: CMakeLists.txt
miscellaneous/CD/: main.py  sample.in
miscellaneous/babel_fish/: main.py
miscellaneous/basicinterpreter/: CMakeLists.txt  main.cpp  sample.in
miscellaneous/catcoat/: CMakeLists.txt  main.cpp  sample.in  sample.output
miscellaneous/closest_sum/: main.py  sample.in  sample.output
miscellaneous/conga_line/: conga_line.cpp  conga_line.hpp  main.cpp  test_conga_line.cpp
miscellaneous/gangur/: main.cpp
miscellaneous/graduation/: main.cpp
miscellaneous/mathemagicians/: main.py  sample.in  sample.output
miscellaneous/reverse_binary/: reverse_binary.cpp  reverse_binary.hpp  test_reverse_binary.cpp
miscellaneous/train_passengers/: train_passengers.py
miscellaneous/unionfind/: CMakeLists.txt  main.cpp  sample.in
tests/: CMakeLists.txt  test_big_integer.cpp  test_convex_hull.cpp  test_ray_casting.cpp  test_segment_tree.cpp  test_unionfind.cpp
turtle_master/: components.py  robot_turtles.py  test_turtle_master.py  turtle_master.py
